--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.45.6",
+    "@tamagui/animations-react-native": "^1.125.6",
+    "@tamagui/config": "^1.125.6",
+    "@tamagui/core": "^1.125.6",
+    "@tamagui/font-inter": "^1.125.6",
+    "@tamagui/theme-base": "^1.125.6",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -61,6 +66,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tamagui": "^1.125.6",
     "vaul": "^0.9.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
